# stringflow

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  justfile  pyproject.toml
.github/workflows/: release-github.yml  release-python.yml  release-rust.yml
crates/stringflow-core/: Cargo.toml
crates/stringflow-core/src/: client.rs  lib.rs
crates/stringflow-core/src/providers/: mod.rs
crates/stringflow-core/src/wire_formats/: completions.rs  messages.rs  mod.rs  responses.rs
crates/stringflow-core/tests/: e2e.rs
crates/stringflow-py/: Cargo.toml
crates/stringflow-py/src/: lib.rs
py/stringflow/: __init__.py  core.pyi  test_api.py
src/stringflow/: main.py
tests/: e2e.rs  test_stringflow.py
