[project]
name = "stringflow"
version = "0.1.0"
description = "Flow strings through language models."
authors = [{ name = "Cody", email = "cody@dkdc.dev" }]
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
dependencies = []

[dependency-groups]
dev = ["maturin>=1.0,<2.0", "ruff>=0.9", "ty>=0.0.19", "pytest>=8"]

[tool.maturin]
module-name = "stringflow.core"
python-packages = ["stringflow"]
python-source = "py"
manifest-path = "crates/stringflow-py/Cargo.toml"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.uv]
cache-keys = [
    { file = "pyproject.toml" },
    { file = "crates/stringflow-core/**/*.rs" },
    { file = "crates/stringflow-py/**/*.rs" },
    { file = "py/stringflow/**/*.py" },
]
