[project]
name = "stringflow"
version = "0.2.2"
description = "Flow strings through language models."
authors = [{ name = "Cody", email = "cody@dkdc.io" }]
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
dependencies = []

[dependency-groups]
dev = [
    "maturin>=1.0,<2.0",
    "ruff>=0.9",
    "ty>=0.0.19",
    "pytest>=8",
    "ipython>=9.10.1",
]

[tool.maturin]
module-name = "stringflow.core"
python-packages = ["stringflow"]
python-source = "py"
manifest-path = "crates/stringflow-py/Cargo.toml"

[tool.pytest.ini_options]
markers = ["e2e: end-to-end tests requiring a running llama-server"]
addopts = "-m 'not e2e'"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.uv]
cache-keys = [
    { file = "pyproject.toml" },
    { file = "crates/stringflow-core/**/*.rs" },
    { file = "crates/stringflow-py/**/*.rs" },
    { file = "py/stringflow/**/*.py" },
]
