[package]
name = "stringflow"
version = "0.1.0"
edition = "2024"
authors = ["Cody <cody@dkdc.dev>"]
description = "Flow strings through language models."
repository = "https://github.com/lostmygithubaccount/stringflow"
license = "MIT"
readme = "README.md"

[lib]
name = "stringflow"
path = "src/lib.rs"

[dependencies]
futures-core = "0.3"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json", "stream", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["time"] }

[dev-dependencies]
futures-util = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
