[workspace]

[package]
name = "stringflow-py"
version = "0.1.0"
edition = "2024"
authors = ["Cody <cody@dkdc.dev>"]
license = "MIT"

[lib]
name = "_core"
crate-type = ["cdylib"]

[dependencies]
stringflow = { path = "../stringflow-core" }
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py311"] }
